css/main.css
/* All Sections */
    *{
        text-decoration: none;
    }

    body, html { 
        height:100%; 
        /* margin:0;      */
        /* padding:0;  */
        } 
        
    *, body{
        box-sizing: border-box;
    }
    *, *:before, *:after {
        box-sizing: inherit;
    }     

    body{
        background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
        background-repeat: no-repeat;
    
        margin:0;     
        padding:0; 
        text-align: center;
        color: #fff;
        font-family: 'Dosis', sans-serif;  
    }   



/* Header Section */
    h1{
        margin-top: 5%;
        font-family: 'Cabin Sketch', sans-serif;
        font-size: 5vw;
        margin-bottom: 2%;
    }



/* Main-Article Section */
    .instructions{
        font-size: 3vw;
    }

    .guessInput{
        padding: 8px;
        display: block;
        border: none;
        border-bottom: 1px solid #ccc;
        width: 25%;
        margin-right: auto;
        margin-left: auto;
        margin-top: 3%;
        margin-bottom: 1%;
        border-radius: 7px;
        text-align: center;
        font-size: 2.5vw;
        color: rgb(36, 35, 35);
    }

    .button{
        color: #fff;
        background-color: #80f6f2b8;
        font-size: 2vw;
        font-weight: bold;
        border-style: solid;
        border-width: .5px;
        border-color: lightgray;
        display: inline-block;
        padding: 8px 16px;
        vertical-align: middle;
        overflow: hidden;
        text-decoration: none;
        text-align: center;
        cursor: pointer;
        white-space: nowrap;
        border-radius: 7px;
        box-shadow:0 1px 10px
    }    


    
/* Footer Section */
    footer{
        margin-top:10px;       
        width:100%;
        height: 4vw;
        bottom:0;
        left: 0;
        right: 0;
        background-color: #d8e1f499;
        text-align: center;
        position: fixed;
    }

    footer p, footer a{
        letter-spacing: .5ch;
        font-size:  1.2vw;  
        margin: 0;
    }

    .inline p{
        display: inline;
    }

    .socialMediaLinks, .socialMediaLinks a:visited{
        color: white;
        padding: 2vh; 
        margin-top: 1.5vh
    }

    .donate, .donate a:visited{
        color: rgb(164, 46, 177);
    }

